# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/coif
# =============================================================================

[metadata]
name          = coif
version       = 0.0.1
description   = Cover image finder: find a cover image given a book identifier
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/caltechlibrary/coif
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/coif
  Bug Tracker = https://github.com/caltechlibrary/coif/issues
keywords      = Python, utilities
classifiers   =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.6
